tests/baselines/reference/scopeTests(strict=true).errors.txt
scopeTests.ts(1,19): error TS7008: Member 'v' implicitly has an 'any' type.
scopeTests.ts(1,29): error TS7008: Member 'p' implicitly has an 'any' type.
scopeTests.ts(1,39): error TS7008: Member 's' implicitly has an 'any' type.
scopeTests.ts(2,7): error TS2415: Class 'D' incorrectly extends base class 'C'.
  Property 'v' is private in type 'C' but not in type 'D'.


==== scopeTests.ts (4 errors) ====
    class C { private v; public p; static s; }
                      ~
!!! error TS7008: Member 'v' implicitly has an 'any' type.
                                ~
!!! error TS7008: Member 'p' implicitly has an 'any' type.
                                          ~
!!! error TS7008: Member 's' implicitly has an 'any' type.
    class D extends C {
          ~
!!! error TS2415: Class 'D' incorrectly extends base class 'C'.
!!! error TS2415:   Property 'v' is private in type 'C' but not in type 'D'.
      public v: number;
      public p: number
      constructor() {
       super()
       this.v = 1;
       this.p = 1;
       C.s = 1;
      }
    }